- - - Allocated weaker weapons to Berserker
- - - Replaced heavy lasers with beam lasers for most Pirate ships
- - New content in progress - expect new faction in a few days

- Other content
- - Compressed most images and reduced size of mod by ~33%


0.2.1 "Ultima Thule" update

Changelog:
- Endless Sky related content
- - Added Hai as a faction, alongside appropriate ships, weapons, and outfits
- - Fixed asymmetrical cell layout for Protector
- - Fixed incorrect name for Nest and Auxiliary
- - Fixed incorrect faction allocation for Plasma Repeater and Plasma Turret
- - Fixed incorrect thrust/turn ratio for A120 and A125 atomic engines
- - Replaced heavy laser with beam laser on Combat Drone
- - Fixed tech for plasma weapons and proton turret
- - Halved cooling duct effectiveness
- - Increased energy cost for modded dronebays
- - Reduced drone count and increased shield + hp on the Auxiliary


0.3.1 "Aventine" update

Changelog:
- Endless Sky related content
- - **Added Remnant as a faction, alongside appropriate ships, weapons, and outfits**
- - Reduced speed for Hawk 2vet and 1vet
- - Fixed bad modifier for modded shields
- - Fixed engine placement for Manta
- - Remade values for shields
- - - Applied multiplier to regenerator shield and regen that has been previously applied to human shields
- - - Increased energy consumption for regenerators
- - - Added shield cooldown value to Hai and Syndicate regenerators
- - - Halved shield regen for all modded shield generators
- - Added custom sounds for modded anti-missile devices
- - Reduced the EMP value of the Hai Railgun by 80%
- - Reverted damage nerf (25%) to Plasma Cannon and Plasma Turret


0.4.1 "Ring of Power" update

Changelog:
- **Added Coalition as a faction, alongside appropriate ships, weapons, and outfits
- Increased energy consumption for Thermoelectric Cooler
- Nerfed the X1050 engines to make them not direct upgrades to the X1200/X1700 series
- Reduced certain Remnant ship tech costs by 5