@@ -5,6 +5,6 @@
   "Faction": 207,
   "Price": 10,
   "Dependencies": [
-    2073
+    2128
   ]
 }
