@@ -25,8 +25,7 @@
     {
       "Type": 2,
       "DamageType": 1,
-      "Power": 0.3,
-      "Factor": 0.3
+      "Power": 0.03
     }
   ]
 }
