@@ -1,6 +1,6 @@
 {
   "ItemType": 27,
   "Id": 1154,
-  "Image": "ion rain shot.png",
+  "Image": "ion rain bolt.png",
   "Size": 1.0
 }
